# DashSlides

./: .gitignore  README.md  app.py  keys.py  presentation.py  pyproject.toml  requirements.txt  vae_app.py
assets/preset1/: style.css
src/dash_slides/: presentation.py  slide.py  slides.py  utils.py
